[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28.6"
async-executor = "1.4.1"
pollster = "0.2.5"
log = "0.4.19"
env_logger = "0.10"
wgpu = "0.16.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.4.1", features = [ "native-activity" ]}
android_logger = "*"

[package.metadata.android]
package = "world.datom.hello_triangle"
activity_name = "HelloTriangleActivity"
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "x86_64-linux-android"]
target_sdk_version = 29
min_sdk_version = 23
apk_name = "hello_triangle"

[package.metadata.android.application]
label = "Hello Triangle"